# CS4204Practical2

./: CMakeLists.txt  CS4204Practical2.odt  ConcQueue.c  Farm.c  Farm.h  FarmResults.txt  Pipeline.c  Pipeline.h  Queue.h  README.md  Stage.c  Stage.h  Worker.c  Worker.h  conc_queue.c  main.c  parapat.h  queue.h  results.txt  resultsFinal.txt  testing-exe  testing.c
stuff/: e_queue.c  parpat.c
